# PLC_Code

2025.03.25_Lecture/: DeepEmbedding.hs  ShallowEmbedding.hs
Lecture10/: Lecture10.hs
Lecture2/: Lecture2.hs  Lecture2_copy.cabal  Lecture2_copy.hs
Lecture3/: Lecture3.hs
Lecture4/: HuttonExercises.hs  Lecture4.hs  Lecture4_2025.02.20_Code.hs  TypeClasses.hs
Lecture6/: Lecture6.cabal  Lecture6.hs  Lecture6Deep.hs  Lecture6Shallow.hs
Lecture7/: LambdaSubstitution.hs  LambdaSubstitutionEnv.hs  LambdaSubstitutionEnvFurther.hs  LambdaSubstitutionSmallStep.hs  LambdaSubstitutionSubst.hs  Lecture7.hs  Lecture7_notes.hs
Lecture8/: Lecture8.cabal
Midterm_Review/: MidtermReview.hs
Solutions/PS1/: .devcontainer.json  Problems1.hs  Tests.hs
Solutions/PS2/: .devcontainer.json
Solutions/PS3/: Problems3.hs  Tests.hs
Solutions/PS4/: .devcontainer.json  Problems4.hs
Solutions/PS5/: Problems5.hs  Tests.hs
Solutions/PS6/: Problems6.hs
