name:                Lecture2_copy
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture2_copy.hs
  ghc-options:         -main-is Lecture2_copy
  hs-Source-Dirs:      ./
  build-depends:       HUnit, base
  default-language:    Haskell2010
