name:                Lecture6
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Lecture6.hs
  ghc-options:         -main-is Lecture6
  hs-Source-Dirs:      ./
  other-modules:       Lecture6Shallow
  build-depends:       HUnit, base
  default-language:    Haskell2010
